Criação do projeto com estrutura para logs.
Signed-off-by: Daniel Augusto de Campos da Silva <daniel.augustocmp@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,11 @@
     <groupId>com.megashipbatte</groupId>
     <artifactId>MegaShipBattle</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
     <name>Batalha Naval</name>
+    <modules>
+        <module>BatalhaNaval</module>
+    </modules>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
