--- a/BatalhaNaval/pom.xml
+++ b/BatalhaNaval/pom.xml
@@ -3,14 +3,10 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <parent>
-        <groupId>com.megashipbatte</groupId>
-        <artifactId>MegaShipBattle</artifactId>
-        <version>1.0-SNAPSHOT</version>
-    </parent>
 
     <groupId>br.edu.up.BatalhaNaval</groupId>
     <artifactId>BatalhaNaval</artifactId>
+    <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>24</maven.compiler.source>
@@ -28,6 +24,12 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>2.23.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.megashipbatte</groupId>
+            <artifactId>MegaShipBattle</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
         </dependency>
     </dependencies>
 
